modified:   index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="nav-items">
             <a href="/">Home</a>
             <a href="MoreInfo.Html">Impact</a>
-            <a href="/">Solution</a>
+            <a href="MoreInfo.Html">Solution</a>
         </div>
     </nav>
     <section class="hero">
