modified:   index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="column-left">
                 <h1>India Vs Climate Change</h1>
                 <p>  Plus Potential Solutions </p>
-                <a href="MoreInfo.Html"><button > For More Informoation</button>
+                <a href="MoreInfo.Html"><button > For More information</button>
             </div>
             <div class="column-right">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Indian_Subcontinent_%28orthographic_projection%29.svg/1200px-Indian_Subcontinent_%28orthographic_projection%29.svg.png" alt="illustraction"
